Changes in poms for compiling with Java 9